                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 12-08-2006 fixed: no control was selected on home screen if you logged on as the master user.
 - 11-08-2006 fixed: "Treat Stacks as single file" only worked for files that already had times (since 23-07-2006)
 - 11-08-2006 added: MyPrograms and MyFiles also accept $ROOT as a path when called from ActivateWindow
 - 11-08-2006 added: MyMusicFiles, MyVideoFiles, and MyPictures windows now accept $ROOT to open to the root listing when called from ActivateWindow.
			MyMusicLibrary accepts both $ROOT and Root.
 - 11-08-2006 changed: consider a total time of 0 for a stack, as missing times so it tries again.
 - 11-08-2006 added: xbmc.playercontrol(partymode) - enables / disables party mode.
 - 11-08-2006 changed: renamed region "Great Britain" to "UK" in the english language settings
 - 11-08-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 11-08-2006 updated: Dutch language file (Thnx to nightspirit)
 - 11-08-2006 updated: Slovenian language file (Thnx to Peter)
 - 10-08-2006 changed: added useThumbs and TreatAsFolder arguments to the browse dialog in python. Got rid of redundent code and changed some documentation.
 - 08-08-2006 updated: mplayer.dll - better support for dvr-ms files
 - 08-08-2006 fixed: Settings Profile window list was cleared before the window close animation was performed.
 - 07-08-2006 changed: the behaviour of the "all" items in music library
 - 07-08-2006 fixed: video files with large amounts of audio data before first video data would refuse to play. (dvr-ms files in particular)
 - 07-08-2006 added: Drempels screen saver