@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 12-08-2006 added: xbmc.getGlobalIdleTime() method to python. Updated some documentation.
  - 12-08-2006 fixed: no control was selected on home screen if you logged on as the master user.
  - 11-08-2006 fixed: "Treat Stacks as single file" only worked for files that already had times (since 23-07-2006)
  - 11-08-2006 added: MyPrograms and MyFiles also accept $ROOT as a path when called from ActivateWindow
